--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "license": "MIT",
   "scripts": {
+    "test": "mocha"
   },
   "dependencies": {
+    "lodash": "^4.15.0"
   },
   "devDependencies": {
+    "mocha": "^3.0.2"
   }
 }
