--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
+sudo: false
 node_js:
-  - "0.10"
-  - "0.12"
-  - "iojs"
   - "4"
   - "5"
   - "6"
+  - "stable"
+before_script:
+  - npm install
