--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,23 @@
-# http://editorconfig.org
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
+end_of_line = lf
+insert_final_newline = true
+charset = utf-8
 indent_style = space
 indent_size = 2
-end_of_line = lf
-charset = utf-8
+tab_width = 2
+
+# Indentation override for all JS under lib directory
+[*.js]
+indent_style = space
+indent_size = 2
 trim_trailing_whitespace = true
-insert_final_newline = false
+insert_final_newline = true
+max_line_length = 100
+
+# Indentation override for all yml files
+[*.yml]
+indent_style = space
+indent_size = 2
